edit index.html / correct word wrap

--- a/css/theme/source/override.scss
+++ b/css/theme/source/override.scss
@@ -669,9 +669,9 @@ embed, iframe, object {
       font-size: 1.03em;
     }
     .page-item {
-      padding: 36px 0 103px;
+      padding: 41px 0 113px;
       li {
-        font-size: .95em;
+        font-size: .9em;
       }
     }
   }
